# league-of-legends

./: .env.example  .gitignore  TODO.md  analysis.ipynb  analyze.py  crawl_matches.py  create_simplified_matches_table.sql  download_examples.py  dump.py  dump.sql  guess_match_schema.py  pyproject.toml  run.sh  start_database.sh  start_job.sh
script/: dev_crawl.sh  dev_nuke.sh  dev_query.sh  download_examples.py  process_data.sh  start_all.sh  start_crawl.sh  tidy.sh
src/: client.py  database.py  util.py
