[project]
name = "league-of-legends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pyrate-limiter>=2.10.0",
    "requests>=2.32.4",
    "requests-ratelimiter>=0.7.0",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
