[project]
name = "league-of-legends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "connectorx[postgres]>=0.4.3",
    "dotenv>=0.9.9",
    "jupyterlab>=4.4.4",
    "notebook>=7.4.3",
    "plotnine>=0.14.5",
    "polars>=1.31.0",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "structlog>=25.4.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
